# GameDevSeries

VideoSeriesGame/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  GLSLProgram.cpp  GLSLProgram.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  Vertex.h  main.cpp  vertexData.h
VideoSeriesGame.xcodeproj/: project.pbxproj
VideoSeriesGame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VideoSeriesGame.xcodeproj/project.xcworkspace/xcshareddata/: VideoSeriesGame.xccheckout
VideoSeriesGame.xcodeproj/xcuserdata/joshuam.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
VideoSeriesGame.xcodeproj/xcuserdata/joshuam.xcuserdatad/xcschemes/: VideoSeriesGame.xcscheme  xcschememanagement.plist
VideoSeriesGame/shaders/: ColorShader.frag  ColorShader.vert
